Fix wrapping text in options menu

--- a/frontend/src/screens/overlay-screen.css
+++ b/frontend/src/screens/overlay-screen.css
@@ -8,7 +8,7 @@
 }
 
 .overlay-screen-button-group {
-  width: 240px;
+  width: 250px;
   margin: 25vw auto;
 }
 
